only the package needs to be nova-consoleproxy..not the service. that remains nova-novncproxy

--- a/nova/map.jinja
+++ b/nova/map.jinja
@@ -8,7 +8,7 @@
 {% set controller = salt['grains.filter_by']({
     'Debian': {
         'pkgs': ['nova-consoleproxy', 'novnc', 'nova-api', 'nova-cert', 'nova-conductor', 'nova-consoleauth', 'nova-doc', 'nova-scheduler', 'python-novaclient', 'python-memcache', 'gettext-base'],
-        'services': ['nova-api', 'nova-cert', 'nova-consoleauth', 'nova-scheduler', 'nova-conductor', 'nova-consoleproxy'],
+        'services': ['nova-api', 'nova-cert', 'nova-consoleauth', 'nova-scheduler', 'nova-conductor', 'nova-novncproxy'],
         'debug': false,
     },
     'RedHat': {
